Fixed search bar width on mobile

--- a/client/src/components/PropertyListings/ListingBar/styles.css
+++ b/client/src/components/PropertyListings/ListingBar/styles.css
@@ -181,7 +181,7 @@
   }
 
   #property-listing-search-bar {
-    width: 100%;
+    width: 90vw;
     margin-left: 0;
   }
 
